# rnnoise

./: CMakeLists.txt  README.md
examples/: rnnoise_demo.c
include/: rnnoise.h
src/: _kiss_fft_guts.h  arch.h  celt_lpc.c  celt_lpc.h  common.h  denoise.c  kiss_fft.c  kiss_fft.h  opus_types.h  pitch.c  pitch.h  rnn.c  rnn.h  rnn_data.c  rnn_data.h  rnn_reader.c  tansig_table.h
training/: bin2hdf5.py  dump_rnn.py  rnn_train.py
